--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-@import-normalize; /* bring in normalize.css styles */
 
 body {
   margin: 0;
@@ -12,4 +11,20 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+ul {
+  list-style: none;
+}
+
+h1,
+h2,
+p,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+* {
+  box-sizing: border-box;
 }
